--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Hero -->
     <section id="hero" class="mt-4 pt-4">
         <div class="container-fluid pr-0 pl-0">
-            <div id="carousel" class="carousel slide" data-ride="carousel">
+            <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="none">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="assets/img/combo1.png" class="d-block w-100" alt="...">
@@ -79,11 +79,18 @@
                         <img src="assets/img/valvula.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
-                <div class="overlay">
-                    <div class="container align-items-center">
-                        <div class="row">
-                            <div class="col-6 offset-6">
-                                <h1>Valvulas Gomez</h1>
+                <div class="overlay carousel-caption">
+                    <div class="container-fluid">
+                        <div class="row align-items-center">
+                            <div class="col-4 offset-7">
+                                <h1 class="text-right mt-4 mb-4">Valvulas Gomez</h1>
+                                <p class="text-right mt-4 mb-4">Fabricante de accesorios para estaciones de servicio.
+                                    Tenemos todo
+                                    lo necesario para
+                                    cumplir con las necesidades de seguridad de carga y descarga de combustible.
+                                    <br>
+                                    Fabricante de Valvulas de retencion y Evertite de 3" y 4"
+                                </p>
                             </div>
                         </div>
                     </div>
