--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </li>
 
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
+                <form class="form-inline my-2 my-lg-0 d-none d-lg-block">
                     <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
                     <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
                         <i class="fas fa-search"></i>
@@ -82,13 +82,12 @@
                 <div class="overlay carousel-caption">
                     <div class="container-fluid">
                         <div class="row align-items-center">
-                            <div class="col-4 offset-7">
-                                <h1 class="text-right mt-4 mb-4">Valvulas Gomez</h1>
-                                <p class="text-right mt-4 mb-4">Fabricante de accesorios para estaciones de servicio.
+                            <div class="col-10 offset-1 col-lg-4 offset-lg-7">
+                                <h1 class="text-center text-lg-right mt-4 mb-4">Valvulas Gomez</h1>
+                                <p class="text-center text-lg-right mt-4 mb-4">Fabricante de accesorios para estaciones de servicio.
                                     Tenemos todo
                                     lo necesario para
                                     cumplir con las necesidades de seguridad de carga y descarga de combustible.
-                                    <br>
                                     Fabricante de Valvulas de retencion y Evertite de 3" y 4"
                                 </p>
                             </div>
@@ -100,6 +99,71 @@
     </section>
     <!-- /Hero -->
 
+    <!-- Productos -->
+    <section id="productos" class=" pt-4 pb-4">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="text-center mb-4">
+                        Productos
+                    </h2>
+                </div>
+            </div>
+            <div class="row">
+                <div id="ValvulasDeRetencion" class="col-12 col-md-6 col-lg-4  form-group">
+                    <a href="">
+                        <div class="card bg-dark text-white">
+                        <img src="assets/img/combo1.png" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h3 class="card-title text-center">Valvulas de Retencion</h3>
+                        </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Accesorios" class="col-12 col-md-6 col-lg-4  form-group">
+                    <a href="">
+                        <div class="card bg-dark text-white">
+                        <img src="assets/img/combo1.png" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h3 class="card-title text-center">Accesorios</h3>
+                        </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="PicosDispensadores" class="col-12 col-md-6 col-lg-4  form-group">
+                    <a href="">
+                        <div class="card bg-dark text-white">
+                        <img src="assets/img/combo1.png" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h3 class="card-title text-center">Picos Dispensadores</h3>
+                        </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="ManguerasCombustible" class="col-12 col-md-6 col-lg-4 offset-lg-2  form-group">
+                    <a href="">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/combo1.png" class="card-img" alt="...">
+                            <div class="card-img-overlay">
+                                <h3 class="card-title text-center mb-0"> Manguera para combustible</h3>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Otros" class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-0  form-group">
+                    <a href="">
+                        <div class="card bg-dark text-white">
+                        <img src="assets/img/combo1.png" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h3 class="card-title text-center">Otros</h3>
+                        </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /Productos -->
 
 
 
