--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                         <div class="row align-items-center">
                             <div class="col-10 offset-1 col-lg-4 offset-lg-7">
                                 <h1 class="text-center text-lg-right mt-4 mb-4">Valvulas Gomez</h1>
-                                <p class="text-center text-lg-right mt-4 mb-4">Fabricante de accesorios para estaciones de servicio.
+                                <p class="text-center text-lg-right mt-4 mb-4">Fabricante de accesorios para estaciones
+                                    de servicio.
                                     Tenemos todo
                                     lo necesario para
                                     cumplir con las necesidades de seguridad de carga y descarga de combustible.
@@ -110,33 +111,51 @@
                 </div>
             </div>
             <div class="row">
-                <div id="ValvulasDeRetencion" class="col-12 col-md-6 col-lg-4  form-group">
+                <div id="ValvulasDeRetencion" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                        <img src="assets/img/combo1.png" class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <h3 class="card-title text-center">Valvulas de Retencion</h3>
-                        </div>
+                            <img src="assets/img/portadas/portada valvulas.png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row align-items-center">
+                                        <div class="col">
+                                            <h3 class="text-center">Valvulas de Retencion</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </a>
                 </div>
                 <div id="Accesorios" class="col-12 col-md-6 col-lg-4  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                        <img src="assets/img/combo1.png" class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <h3 class="card-title text-center">Accesorios</h3>
-                        </div>
+                            <img src="assets/img/portadas/accesorios.png" class="card-img" alt="...">
+                            <div class="card-img-overlay">
+                                <div class="container">
+                                    <div class="row align-items-center">
+                                        <div class="col">
+                                            <h3 class="card-title text-center">Accesorios</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </a>
                 </div>
                 <div id="PicosDispensadores" class="col-12 col-md-6 col-lg-4  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                        <img src="assets/img/combo1.png" class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <h3 class="card-title text-center">Picos Dispensadores</h3>
-                        </div>
+                            <img src="assets/img/portadas/picosDispensadores.png" class="card-img" alt="...">
+                            <div class="card-img-overlay">
+                                <div class="container">
+                                    <div class="row align-items-center">
+                                        <div class="col">
+                                            <h3 class="card-title text-center">Picos Dispensadores</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </a>
                 </div>
@@ -145,7 +164,13 @@
                         <div class="card bg-dark text-white">
                             <img src="assets/img/combo1.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
-                                <h3 class="card-title text-center mb-0"> Manguera para combustible</h3>
+                                <div class="container">
+                                    <div class="row align-items-center">
+                                        <div class="col">
+                                            <h3 class="card-title text-center mb-0"> Manguera para combustible</h3>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -153,10 +178,16 @@
                 <div id="Otros" class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-0  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                        <img src="assets/img/combo1.png" class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <h3 class="card-title text-center">Otros</h3>
-                        </div>
+                            <img src="assets/img/combo1.png" class="card-img" alt="...">
+                            <div class="card-img-overlay">
+                                <div class="container">
+                                    <div class="row align-items-center">
+                                        <div class="col">
+                                            <h3 class="card-title text-center">Otros</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </a>
                 </div>
