--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="none">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/img/combo1.png" class="d-block w-100" alt="...">
+                        <img src="assets/img/portadas/accesorios.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/img/combo2.png" class="d-block w-100" alt="...">
+                        <img src="assets/img/portadas/picosDispensadores.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/img/valvula.png" class="d-block w-100" alt="...">
+                        <img src="assets/img/portadas/portada valvulas.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <div class="overlay carousel-caption">
@@ -162,7 +162,7 @@
                 <div id="ManguerasCombustible" class="col-12 col-md-6 col-lg-4 offset-lg-2  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/combo1.png" class="card-img" alt="...">
+                            <img src="assets/img/portadas/picosDispensadores.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <div class="container">
                                     <div class="row align-items-center">
@@ -178,7 +178,7 @@
                 <div id="Otros" class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-0  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/combo1.png" class="card-img" alt="...">
+                            <img src="assets/img/portadas/portada valvulas.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <div class="container">
                                     <div class="row align-items-center">
@@ -195,6 +195,47 @@
         </div>
     </section>
     <!-- /Productos -->
+
+    <!-- Quienes Somos -->
+    <section id="quienesSomos">
+        <div class="container-fluid">
+            <div class="row pt-4 pb-2">
+                <div class="col-12">
+                    <h2 class="text-center">Quienes Somos</h2>
+                </div>
+            </div>
+            <div class="row pt-2 pb-4">
+                <div class="col-12 col-lg-6 pl-0 pr-0">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-pasue="none">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/img/portadas/valvulas de retencion.png" class="d-block w-100"
+                                    alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/portadas/picosDispensadores.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/portadas/accesorios.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col pl-4 pr-4">
+                    <h5 class="text-center text-lg-right">
+                        En 1950 nacía "Gómez e Hijos", fabricantes de piezas de bronce para el Ferrocarril Roca. Su
+                        fundador, Alfonso Gómez, fue secundado por sus jóvenes hijos gemelos, Jorge y Osvaldo, quienes
+                        tomarían las riendas de la fábrica algunos años después.
+                        De inmediato, Alfonso incorporó la producción de válvulas de pie, que reemplazó la exclusividad
+                        del Ferrocarril y que ha seguido ininterrumpidamente fabricándose hasta el día de hoy.
+                        Actualmente, los destinos son conducidos por la tercera generación, quien ha ampliado el
+                        horozonte con nuevos productos, tal su intención: estar siempre acorde con los tiempos.
+                    </h5>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /Quienes Somos -->
 
 
 
