--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand ml-auto mr-auto pt-0 pb-0" href="#">
                 <img id="logo" src="assets/img/logo.png" alt="">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button id="navBarButton" class="navbar-toggler mr-2 bt-outline" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,12 +54,6 @@
                     </li>
 
                 </ul>
-                <form class="form-inline my-2 my-lg-0 d-none d-lg-block">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </form>
             </div>
         </div>
     </nav>
@@ -104,9 +99,10 @@
     <section id="productos" class=" pt-4 pb-4">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-12 text-center">
+                    <small>Conoce nuestros</small>
                     <h2 class="text-center mb-4">
-                        Productos
+                        PRODUCTOS
                     </h2>
                 </div>
             </div>
@@ -130,7 +126,7 @@
                 <div id="Accesorios" class="col-12 col-md-6 col-lg-4  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/portadas/accesorios.png" class="card-img" alt="...">
+                            <img src="assets/img/portadas/portadaAccesorios.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <div class="container">
                                     <div class="row align-items-center">
@@ -162,7 +158,7 @@
                 <div id="ManguerasCombustible" class="col-12 col-md-6 col-lg-4 offset-lg-2  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/portadas/picosDispensadores.png" class="card-img" alt="...">
+                            <img src="assets/img/portadas/portadaMangueras.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <div class="container">
                                     <div class="row align-items-center">
@@ -209,14 +205,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-pasue="none">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/portadas/valvulas de retencion.png" class="d-block w-100"
-                                    alt="...">
-                            </div>
-                            <div class="carousel-item">
                                 <img src="assets/img/portadas/picosDispensadores.png" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/portadas/accesorios.png" class="d-block w-100" alt="...">
+                                <img src="assets/img/portadas/portadaMangueras.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/portadas/portadaAccesorios.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
@@ -238,6 +233,82 @@
     <!-- /Quienes Somos -->
 
 
+    <!-- Contacto -->
+    <section id="contacto">
+        <div class="container">
+            <div class="row pt-4 pb-2">
+                <div class="col-12 text-center">
+                    <small>Contacta con</small>
+                    <h2>NOSOTROS</h2>
+                </div>
+            </div>
+            <div class="row pt-2 pb-4">
+                <div class="col-8 offset-2">
+                    <form>
+                        <div class="form-row">
+                            <div class="col-12 col-lg-6 form-group">
+                                <input type="text" class="form-control" placeholder="Nombre">
+                            </div>
+                            <div class="col-12 col-lg-6 form-group">
+                                <input type="text" class="form-control" placeholder="Apellido">
+                            </div>
+                            <div class="col-12 form-group">
+                                <input type="text" class="form-control" placeholder="Correo Electronico">
+                            </div>
+                            <div class="col-12 form-group">
+                                <textarea name="text" class="form-control form-control-lg"
+                                    placeholder="Escriba su mensaje..."></textarea>
+                                <small class="form-text text-muted" id="textAreaComment">Incluya un titulo en referencia
+                                    al mensaje</small>
+                            </div>
+                            <div class="col-12 col-lg-2">
+                                <button type="button" class="btn btn-success btn-block">Enviar!</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /Contacto -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-8 text-center pt-4 pb-2">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-1 p-0">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                            <div class="col-11 p-0 text-left">
+                                <span class="badge badge-primary p-1">
+                                    +54 4241-0942
+                                </span>
+                            </div>
+                            <div class="col-1 p-0">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <div class="col-11 p-0 text-left">
+                                <span class="badge badge-primary p-1">
+                                    Manuel Ocampo 569 Lanus Oeste
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col text-center text-lg-right pt-2 pb-2">
+                    <p class="mb-0">
+                        <span class="badge badge-secondary p-2">
+                            Valvulas Gomez 1950~2019
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- /Footer -->
 
 
 
