Pagina Prinicipal Terminada

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col pl-4 pr-4">
+                <div class="col pl-4 pr-4 pt-2 pb-2">
                     <h5 class="text-center text-lg-right">
                         En 1950 nacía "Gómez e Hijos", fabricantes de piezas de bronce para el Ferrocarril Roca. Su
                         fundador, Alfonso Gómez, fue secundado por sus jóvenes hijos gemelos, Jorge y Osvaldo, quienes
@@ -285,6 +285,12 @@
                             <div class="col-11 p-0 text-left">
                                 <span class="badge badge-primary p-1">
                                     +54 4241-0942
+                                </span>
+                                <span class="badge badge-primary p-1">
+                                    +54 4249-6504
+                                </span>
+                                <span class="badge badge-warning p-1">
+                                    +54 11-5410-6143
                                 </span>
                             </div>
                             <div class="col-1 p-0">
