--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="none">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/img/portadas/accesorios.png" class="d-block w-100" alt="...">
+                        <img src="assets/img/hero/portadaPicos.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/img/portadas/picosDispensadores.png" class="d-block w-100" alt="...">
+                        <img src="assets/img/portadas/" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="assets/img/portadas/portada valvulas.png" class="d-block w-100" alt="...">
@@ -108,7 +108,7 @@
             </div>
             <div class="row">
                 <div id="ValvulasDeRetencion" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
-                    <a href="">
+                    <a href="Valvulas-De-Retencion.html">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/portadas/portada valvulas.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
@@ -142,7 +142,7 @@
                 <div id="PicosDispensadores" class="col-12 col-md-6 col-lg-4  form-group">
                     <a href="">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/portadas/picosDispensadores.png" class="card-img" alt="...">
+                            <img src="assets/img/portadas/portadaPicos2.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <div class="container">
                                     <div class="row align-items-center">
@@ -205,7 +205,7 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-pasue="none">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/portadas/picosDispensadores.png" class="d-block w-100" alt="...">
+                                <img src="assets/img/Hero/portadaPicos.png" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
                                 <img src="assets/img/portadas/portadaMangueras.png" class="d-block w-100" alt="...">
@@ -289,7 +289,7 @@
                                 <span class="badge badge-primary p-1">
                                     +54 4249-6504
                                 </span>
-                                <span class="badge badge-warning p-1">
+                                <span class="badge badge-primary p-1">
                                     +54 11-5410-6143
                                 </span>
                             </div>
