--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand ml-auto mr-auto pt-0 pb-0" href="#">
+            <a class="navbar-brand ml-auto mr-auto pt-0 pb-0" href="index.html">
                 <img id="logo" src="assets/img/logo.png" alt="">
             </a>
             <button id="navBarButton" class="navbar-toggler mr-2 bt-outline" type="button" data-toggle="collapse"
@@ -35,7 +35,7 @@
                             Productos
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Valvulas de retencion</a>
+                            <a class="dropdown-item" href="Valvulas-De-Retencion.html">Valvulas de retencion</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Accesorios</a>
                             <div class="dropdown-divider"></div>
@@ -202,7 +202,7 @@
             </div>
             <div class="row pt-2 pb-4">
                 <div class="col-12 col-lg-6 pl-0 pr-0">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-pasue="none">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="assets/img/Hero/portadaPicos.png" class="d-block w-100" alt="...">
