valvulas de retencion casi terminado

--- a/accesorios.html
+++ b/accesorios.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/product.css">
-    <title>Valvulas De Retencion</title>
+    <title>Accesorios</title>
 </head>
 
 <body id="body">
@@ -70,8 +70,8 @@
                 </div>
             </div>
             <div class="row">
-                <div id="ValvulaDePie" class="col-12 col-md-6 col-lg-4 offset-lg-2 pb-0  form-group">
-                    <a data-target="#modalValvulaPie" data-toggle="modal">
+                <div id="Fuelles" class="col-12 col-md-6 col-lg-4 offset-lg-2 pb-0  form-group">
+                    <a data-target="#modalFuelles" data-toggle="modal">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/productos/valvula.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
@@ -80,24 +80,6 @@
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
                                                 Valvula De Pie
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div id="ValvulaBajoSurtidor" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
-                    <a data-target="#modalValvulaBajo" data-toggle="modal">
-                        <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/BajoSurtidor1.png" class="card-img" alt="...">
-                            <div class="card-img-overlay ">
-                                <div class="container">
-                                    <div class="row text-right">
-                                        <div class="col pb-2">
-                                            <span class="badge badge-pill badge-light  align-bottom">
-                                                Valvula Bajo Surtidor
                                             </span>
                                         </div>
                                     </div>
@@ -195,12 +177,12 @@
     <!-- /Footer -->
 
 
-    <!-- Modal Valvula De Pie-->
-    <div class="modal fade " id="modalValvulaPie" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal Fuelles-->
+    <div class="modal fade " id="modalFuelles" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Valvula De Pie</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Fuelles</h5>
                     </button>
                 </div>
                 <div class="modal-body">
@@ -264,79 +246,8 @@
                 </div>
             </div>
     </div>
-    <!--/Modal Valvula De Pie-->
+    <!--/Modal Fuelles-->
 
-
-    <!-- Modal Valvula Bajo Surtidor-->
-    <div class="modal fade " id="modalValvulaBajo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Valvula Bajo Surtidor</h5>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12">
-                                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                                            <ol class="carousel-indicators">
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-                                            </ol>
-                                        <div class="carousel-inner">
-                                            <div class="carousel-item active">
-                                                <img src="assets/img/productos/BajoSurtidor1.png" class="d-block w-100 ml-auto mr-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor2.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor3.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor4.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                        </div>
-                                        </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 mt-2 text-center">
-                                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dicta dolorem magni quod id sunt magnam quibusdam, hic numquam consequatur error alias tenetur nostrum soluta iusto, voluptatem vitae quisquam distinctio.
-                                </small>
-                            </div>
-                            <div class="col-12 col-md-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Peso: 3KG</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-dark" data-dismiss="modal">Cerrar</button>
-                </div>
-                </div>
-            </div>
-    </div>
-    <!--/Modal Valvula Bajo Surtidor-->
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
