--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="#quienesSomos">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
 
                 </ul>
@@ -64,12 +64,13 @@
         <div class="container-fluid pr-0 pl-0">
             <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="none">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                        <div class="carousel-item active">
+                            <img src="assets/img/Hero/valvulasDeRetencion.png" class="d-block w-100" alt="...">
+                        </div>
+                    <div class="carousel-item">
                         <img src="assets/img/hero/portadaPicos.png" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/portadas/" class="d-block w-100" alt="...">
-                    </div>
+                    
                     <div class="carousel-item">
                         <img src="assets/img/portadas/portada valvulas.png" class="d-block w-100" alt="...">
                     </div>
@@ -124,7 +125,7 @@
                     </a>
                 </div>
                 <div id="Accesorios" class="col-12 col-md-6 col-lg-4  form-group">
-                    <a href="">
+                    <a href="accesorios.html">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/portadas/portadaAccesorios.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
