--- a/Valvulas-De-Retencion.html
+++ b/Valvulas-De-Retencion.html
@@ -71,7 +71,7 @@
             </div>
             <div class="row">
                 <div id="ValvulaDePie" class="col-12 col-md-6 col-lg-4 offset-lg-2 pb-0  form-group">
-                    <a data-target="#modalValvulaPie" data-toggle="modal">
+                    <a href="" data-target="#modalValvulaPie" data-toggle="modal">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/productos/valvula.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
@@ -89,7 +89,7 @@
                     </a>
                 </div>
                 <div id="ValvulaBajoSurtidor" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
-                    <a data-target="#modalValvulaBajo" data-toggle="modal">
+                    <a href="" data-target="#modalValvulaBajo" data-toggle="modal">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/productos/BajoSurtidor1.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
