--- a/Valvulas-De-Retencion.html
+++ b/Valvulas-De-Retencion.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/product.css">
-    <title>Valvulas De Retencion</title>
+    <title>Valvulas Gomez</title>
 </head>
 
 <body id="body">
@@ -63,10 +63,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <small>Conoce nuestros</small>
-                    <h2 class="text-center text-uppercase mb-4">
-                        Productos
-                    </h2>
+                    <small>Conoce nuestras</small>
+                    <h3 class="text-center text-uppercase mb-4">
+                        Valvulas De Retencion
+                    </h3>
                 </div>
             </div>
             <div class="row">
