--- a/accesorios.html
+++ b/accesorios.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/product.css">
-    <title>Accesorios</title>
+    <title>Valvulas Gomez</title>
 </head>
 
 <body id="body">
@@ -64,14 +64,50 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <small>Conoce nuestros</small>
-                    <h2 class="text-center text-uppercase mb-4">
-                        Productos
-                    </h2>
+                    <h3 class="text-center text-uppercase mb-4">
+                        Accesorios
+                    </h3>
                 </div>
             </div>
             <div class="row">
-                <div id="Fuelles" class="col-12 col-md-6 col-lg-4 offset-lg-2 pb-0  form-group">
-                    <a data-target="#modalFuelles" data-toggle="modal">
+                <div id="Evertite3" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalEvertite3" data-toggle="modal">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/productos/Evertite3 (1).png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row text-right">
+                                        <div class="col pb-2">
+                                            <span class="badge badge-pill badge-light  align-bottom">
+                                                Evertite 3"
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Tapa3" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalTapa3" data-toggle="modal">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/productos/Tapa3 (1).png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row text-right">
+                                        <div class="col pb-2">
+                                            <span class="badge badge-pill badge-light  align-bottom">
+                                                Tapa 3"
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Buje3" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalBuje3" data-toggle="modal">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/productos/valvula.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
@@ -79,7 +115,97 @@
                                     <div class="row text-right">
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
-                                                Valvula De Pie
+                                                Buje 3"
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Evertite4" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalEvertite4" data-toggle="modal">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/productos/valvula.png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row text-right">
+                                        <div class="col pb-2">
+                                            <span class="badge badge-pill badge-light  align-bottom">
+                                                Evertite 4"
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Tapa4" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalTapa4" data-toggle="modal">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/productos/valvula.png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row text-right">
+                                        <div class="col pb-2">
+                                            <span class="badge badge-pill badge-light  align-bottom">
+                                                Tapa 4"
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Buje4" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalBuje4" data-toggle="modal">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/productos/valvula.png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row text-right">
+                                        <div class="col pb-2">
+                                            <span class="badge badge-pill badge-light  align-bottom">
+                                                Buje 4"
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="TapaExpansora" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalTapaExpansora" data-toggle="modal">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/productos/valvula.png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row text-right">
+                                        <div class="col pb-2">
+                                            <span class="badge badge-pill badge-light  align-bottom">
+                                                Tapa Expansora
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Fuelles" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalFuelles" data-toggle="modal">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/productos/valvula.png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row text-right">
+                                        <div class="col pb-2">
+                                            <span class="badge badge-pill badge-light  align-bottom">
+                                                Fuelle
                                             </span>
                                         </div>
                                     </div>
@@ -175,6 +301,75 @@
         </div>
     </footer>
     <!-- /Footer -->
+
+
+    <!-- Modal Evertite3-->
+    <div class="modal fade " id="modalEvertite3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Evertite 3"</h5>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                                            <ol class="carousel-indicators">
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                                            </ol>
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <img src="assets/img/productos/Evertite3 (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="assets/img/productos/Evertite3 (3).png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="assets/img/productos/Evertite3 (1).png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                            </div>
+                                        </div>
+                                        </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 mt-2 text-left text-md-center">
+                                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dicta dolorem magni quod id sunt magnam quibusdam, hic numquam consequatur error alias tenetur nostrum soluta iusto, voluptatem vitae quisquam distinctio.
+                                </small>
+                            </div>
+                            <div class="col-12 col-md-6 text-left text-md-center mt-2 mb-2">
+                                <span class="badge btn-VG p-2">Peso: 3KG</span>
+                            </div>
+                            <div class="col-12 col-md-6 text-left text-md-center mt-2 mb-2">
+                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
+                            </div>
+                            <div class="col-12 col-md-6 text-left text-md-center mt-2 mb-2">
+                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
+                            </div>
+                            <div class="col-12 col-md-6 text-left text-md-center mt-2 mb-2">
+                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
+                            </div>
+                            <div class="col-12 col-md-6 text-left text-md-center mt-2 mb-2">
+                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
+                            </div>
+                            <div class="col-12 col-md-6 text-left text-md-center mt-2 mb-2">
+                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-dark" data-dismiss="modal">Cerrar</button>
+                </div>
+                </div>
+            </div>
+    </div>
+    <!--/Modal Evertite3-->
 
 
     <!-- Modal Fuelles-->
