--- a/Valvulas-De-Retencion.html
+++ b/Valvulas-De-Retencion.html
@@ -39,9 +39,9 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="Valvulas-De-Retencion.html">Valvulas de retencion</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Accesorios</a>
+                            <a class="dropdown-item" href="accesorios.html">Accesorios</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Picos Dispensadores</a>
+                            <a class="dropdown-item" href="picos-Dispensadores.html">Picos Dispensadores</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Mangueras para Combustible</a>
                             <div class="dropdown-divider"></div>
