--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="Valvulas-De-Retencion.html">Valvulas de retencion</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Accesorios</a>
+                            <a class="dropdown-item" href="accesorios.html">Accesorios</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Picos Dispensadores</a>
+                            <a class="dropdown-item" href="picos-Dispensadores.html">Picos Dispensadores</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Mangueras para Combustible</a>
                             <div class="dropdown-divider"></div>
@@ -141,7 +141,7 @@
                     </a>
                 </div>
                 <div id="PicosDispensadores" class="col-12 col-md-6 col-lg-4  form-group">
-                    <a href="">
+                    <a href="picos-Dispensadores.html">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/portadas/portadaPicos2.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
@@ -218,7 +218,7 @@
                     </div>
                 </div>
                 <div class="col pl-4 pr-4 pt-2 pb-2">
-                    <h5 class="text-center text-lg-right">
+                    <h5 class="text-center">
                         En 1950 nacía "Gómez e Hijos", fabricantes de piezas de bronce para el Ferrocarril Roca. Su
                         fundador, Alfonso Gómez, fue secundado por sus jóvenes hijos gemelos, Jorge y Osvaldo, quienes
                         tomarían las riendas de la fábrica algunos años después.
